<resources>
    <string-array name="settingsList">
        <item>Communication Protocols</item>
        <item>Configure F1 / F2</item>
    </string-array>

    <string name="app_name">MDP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="disconnected_bt">Not Connected - Touch to Connect</string>
    <string name="connected_bt">Connected to Device Name</string>
    <string name="scan_bt">Scan for Devices</string>
    <string name="stop_scan_bt">Stop Discovery</string>
    <string name="no_paired_device">There is no paired device</string>
    <string name="no_available_device">There is no available device.\nPress \"Scan for Devices\" to search</string>
    <string name="Bt_State_None">STATE_NONE</string>
    <string name="Bt_State_Listening">STATE_LISTENING</string>
    <string name="Bt_State_Connecting">STATE_CONNECTING</string>
    <string name="Bt_State_Connected">STATE_CONNECTED</string>
    <string name="Mdp_UUID">00001101-0000-1000-8000-00805F9B34FB</string>
    <string name="ReceiveTV">Received text</string>
    <string name="SendTV">Send text</string>
    <string name="forward">Forward</string>
    <string name="rotateLeft">Rotate Left</string>
    <string name="rotateRight">Rotate Right</string>
    <string name="reverse">Reverse</string>
    <string name="beginExplore">Begin Exploration</string>
    <string name="beginFastest">Begin Fastest Path</string>
    <string name="stopExplore">Stop Exploration</string>
    <string name="stopFastest">Stop Fastest Path</string>
    <string name="sendArena">Send Arena Information</string>
    <string name="protocolTitle">Communication Protocols</string>
    <string name="configureTitle">Configure F1 / F2</string>
    <string name="messageLogTitle">Message Log</string>
    <string name="f1">F1</string>
    <string name="f2">F2</string>
    <string name="f1SaveBtn">Save F1</string>
    <string name="f2SaveBtn">Save F2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="y_axis">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>

    <string-array name="x_axis">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>

</resources>
